[package]
name = "wsocket"
description = "Lighweight, fast and native WebSocket implementation for Rust."
license = "Apache-2.0 OR MIT"
keywords = ["websocket", "tokio", "async", "http"]
repository = "https://github.com/MarcelCoding/wsocket.git"
homepage = "https://github.com/MarcelCoding/wsocket"
version = "0.1.1"
edition = "2021"

[features]
client = ["dep:rand"]

[dependencies]
rand = { version = "0.8", default-features = false, features = ["std", "std_rng"], optional = true }
tokio = { version = "1.32", default-features = false, features = ["io-util", "sync", "macros"] }
thiserror = "1.0"
tracing = "0.1"
lazy_static = "1.4.0"

[dev-dependencies]
tokio = { version = "1.32", default-features = false, features = ["rt-multi-thread"] }
