[package]
name = "wsocket"
description = "Lighweight, fast and native WebSocket implementation for Rust."
license = "Apache-2.0 OR MIT"
keywords = ["websocket", "tokio", "async", "http"]
repository = "https://github.com/MarcelCoding/wsocket.git"
homepage = "https://github.com/MarcelCoding/wsocket"
version = "0.2.0"
edition = "2021"

[features]
client = ["dep:rand"]
handshake = ["client", "dep:hyper", "dep:base64", "dep:http-body-util", "dep:hyper-util", "hyper/client", "hyper/http1"]
upgrade = ["dep:hyper", "dep:base64", "dep:http-body-util", "dep:hyper-util", "dep:pin-project-lite", "dep:sha1"]

[dependencies]
rand = { version = "0.8", default-features = false, features = ["std", "std_rng"], optional = true }
tokio = { version = "1.34", default-features = false, features = ["io-util", "sync", "macros"] }
hyper-util = { version = "0.1", default-features = false, optional = true, features = ["tokio"] }
base64 = { version = "0.21", default-features = false, optional = true, features = ["alloc"] }
pin-project-lite = { version = "0.2", default-features = false, optional = true }
http-body-util = { version = "0.1", default-features = false, optional = true }
sha1 = { version = "0.10", default-features = false, optional = true }
hyper = { version = "1.0", default-features = false, optional = true }
thiserror = { version = "1.0", default-features = false }
tracing = { version = "0.1", default-features = false }

[dev-dependencies]
tokio = { version = "1.34", default-features = false, features = ["rt-multi-thread"] }

[package.metadata.docs.rs]
all-features = true
